fix: aumetado o gap do input de datas

--- a/src/pages/NewActivity/newActivity.module.css
+++ b/src/pages/NewActivity/newActivity.module.css
@@ -12,9 +12,13 @@
 
 .inputs_date_time {
   width: 100%;
-  gap: 10px;
+  gap: 20px;
   display: flex;
   flex-direction: row;
+
+  .ant-picker-input > input::placeholder {
+    color: #1E1E1E;  
+  }
 }
 
 .group {
@@ -45,6 +49,18 @@
 }
 
 .datepicker {
+  width: 169px;
+  border-radius: var(--Small);
+  border: 1px solid #B6B6B6;
+  display: flex;
+  justify-content: space-between;
+  opacity: 1;
   border-radius: 8px;
   border: var(--STROKE-1) 1px solid;
+
+  &::placeholder {
+    color: var(--TEXT-PRIMARY);
+    size: var(--LABEL-SMALL);
+    opacity: 1;
+  };
 }
